force-app/main/default/objects/Calendar__c/Calendar__c.object-meta.xml
<CustomObject>
    <label>일정</label>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>일정</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>