force-app/main/default/objects/Calendar__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>일정</relationshipLabel>
    <relationshipName>Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>