force-app/main/default/objects/Calendar__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <label>Attendee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>