force-app/main/default/objects/Calendar__c/fields/Ends__c.field-meta.xml
<CustomField>
    <fullName>Ends__c</fullName>
    <label>일정 종료일자</label>
    <type>DateTime</type>
</CustomField>