force-app/main/default/objects/Calendar__c/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <formula>CreatedById =  $User.Id</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>