force-app/main/default/objects/Calendar__c/fields/MeetingLog__c.field-meta.xml
<CustomField>
    <fullName>MeetingLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Log</label>
    <referenceTo>MeetingLog__c</referenceTo>
    <relationshipLabel>일정</relationshipLabel>
    <relationshipName>MeetingLog</relationshipName>
    <type>Lookup</type>
</CustomField>