force-app/main/default/objects/Calendar__c/fields/Starts__c.field-meta.xml
<CustomField>
    <fullName>Starts__c</fullName>
    <label>일정 시작일자</label>
    <type>DateTime</type>
</CustomField>