force-app/main/default/objects/Calendar__c/listViews/My_Calendar.listView-meta.xml
<ListView>
    <fullName>My_Calendar</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>내가 소유한 일정</label>
    <sharedTo>
        <role>B_SalesTeam1</role>
    </sharedTo>
</ListView>